crates/ic-lint/tests/snapshots/shift_bound__rshift_in_bound.snap
---
source: crates/ic-lint/tests/shift_bound.rs
expression: test_lint(source)
---
! shift-bound: bitshift expressions in template bounds are not portable
  @ test.idl:2:36

 2 │ typedef sequence<long, 256 >> 2> BoundedSeq;
   │                            ˆˆ this shift operator

  ? consider using a constant instead
  * other IDL compilers may not support bitshift expressions in template bounds
