crates/ic-lint/tests/snapshots/shift_bound__shift_in_complex_expression.snap
---
source: crates/ic-lint/tests/shift_bound.rs
expression: test_lint(source)
---
warning[shift-bound]: bitshift expressions in template bounds are not portable
   ┌ test.idl:2:35
   │
 2 │         typedef sequence<long, (1 << 8) + 1> BoundedSeq;
   ·                                   ^^ this shift operator
   └──
 help: consider using a constant instead
 note: other IDL compilers may not support bitshift expressions in template bounds
