crates/ic-lint/tests/snapshots/shift_bound__shift_in_map_bound.snap
---
source: crates/ic-lint/tests/shift_bound.rs
expression: test_lint(source)
---
warning[shift-bound]: bitshift expressions in template bounds are not portable
   ┌ test.idl:2:37
   │
 2 │         typedef map<string, long, 1 << 4> BoundedMap;
   ·                                     ^^ this shift operator
   └──
 help: consider using a constant instead
 note: other IDL compilers may not support bitshift expressions in template bounds
