crates/ic-lint/tests/snapshots/shift_bound__shift_in_sequence_bound.snap
---
source: crates/ic-lint/tests/shift_bound.rs
expression: test_lint(source)
---
! shift-bound: bitshift expressions in template bounds are not portable
  @ test.idl:2:34

 2 │ typedef sequence<long, 1 << 8> BoundedSeq;
   │                          ˆˆ this shift operator

  ? consider using a constant instead
  * other IDL compilers may not support bitshift expressions in template bounds
